[tool.poetry]
name = "extract_facial"
version = "0.1.0"
description = "Extract facial features in Python such as the eyes and mouth from MTCNN's predictions and find whether eyes or mouths are closed/open."
authors = ["vink246 <2vineetk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "^4.5.2"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
